--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,6 @@
     {"src": "/api/index.py", "use": "@vercel/python"}
   ],
   "routes": [
-    {"src": "/api/(.*)", "dest": "index.py"}
+    {"src": "/(.*)", "dest": "index.py"}
   ]
 }
